// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration given configuration should set options 1`] = `
Object {
  "enableDebug": true,
  "minify": false,
  "stripComments": true,
  "tailwindConf": Object {
    "content": Array [
      "./src/**/*.html",
      "./src/**/*.js",
      "./src/**/*.jsx",
      "./src/**/*.tsx",
    ],
    "darkMode": false,
    "mode": "jit",
    "plugins": Array [],
    "theme": Object {
      "extend": Object {},
    },
    "variants": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;

@layer base {
  .autoplacement-example {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-gap: 20px;
  }
}
",
  "tailwindCssPath": "src/test/configuration/tailwind.css",
  "useAutoPrefixer": true,
}
`;

exports[`configuration given configuration should set options 2`] = `
Object {
  "enableDebug": true,
  "minify": false,
  "stripComments": true,
  "tailwindConf": [MockFunction],
  "tailwindCssContents": "@tailwind base;

@layer base {
  .autoplacement-example {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-gap: 20px;
  }
}
",
  "tailwindCssPath": "src/test/configuration/tailwind.css",
  "useAutoPrefixer": true,
}
`;

exports[`configuration given default configuration should match default options 1`] = `
Object {
  "enableDebug": false,
  "minify": true,
  "stripComments": false,
  "tailwindConf": Object {
    "content": Array [],
    "plugins": Array [],
    "theme": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
  "useAutoPrefixer": true,
}
`;

exports[`configuration given full postcss object configuration, should set postcss object 1`] = `
Object {
  "enableDebug": false,
  "minify": true,
  "postcss": Object {
    "plugins": Array [
      [Function],
    ],
  },
  "stripComments": false,
  "tailwindConf": Object {
    "content": Array [],
    "plugins": Array [],
    "theme": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
  "useAutoPrefixer": true,
}
`;

exports[`configuration given full postcssrc configuration, should set postcssrc path 1`] = `
Object {
  "enableDebug": false,
  "minify": true,
  "postcss": "src/test/configuration/postcss.config.js",
  "stripComments": false,
  "tailwindConf": Object {
    "content": Array [],
    "plugins": Array [],
    "theme": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
  "useAutoPrefixer": true,
}
`;

exports[`configuration given no configuration should set default options 1`] = `
Object {
  "enableDebug": false,
  "minify": true,
  "stripComments": false,
  "tailwindConf": Object {
    "content": Array [],
    "plugins": Array [],
    "theme": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
  "useAutoPrefixer": true,
}
`;
